--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ STRIPE_WEBHOOK_SECRET=whsec_***
 BASE_URL=http://localhost:3000
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_***
 CLERK_SECRET_KEY=sk_test_***
+CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
