--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^5.6.0",
     "@octokit/rest": "^21.0.2",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -46,6 +47,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "1.1.5",
     "typescript": "^5.6.2",
+    "vaul": "^0.9.4",
     "zod": "^3.23.8"
   }
 }
