--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ BASE_URL=http://localhost:3000
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_***
 CLERK_SECRET_KEY=sk_test_***
 CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
+
+#github
+APP_ID="1002881"
+WEBHOOK_SECRET="YOUR_WEBHOOK_SECRET"
+PRIVATE_KEY_PATH="YOUR_PRIVATE_KEY_PATH"
+NEXT_PUBLIC_GITHUB_CLIENT_ID="Iv23liJ4LWcyfl3TEO27"
+GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
