--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "typescript": "^5.6.2",
     "vaul": "^0.9.4",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "smee-client": "^2.0.3"
   }
 }
