--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # This is an example of your .env file format, which pnpm db:setup will create.
 # Note: this must be .env, not .env.local, without further configuration changes.
-POSTGRES_URL=postgresql://***
+SUPABASE_POSTGRES_URL=postgresql://***
 STRIPE_SECRET_KEY=sk_test_***
 STRIPE_WEBHOOK_SECRET=whsec_***
 BASE_URL=http://localhost:3000
@@ -14,3 +14,18 @@ WEBHOOK_SECRET="YOUR_WEBHOOK_SECRET"
 PRIVATE_KEY_PATH="YOUR_PRIVATE_KEY_PATH"
 NEXT_PUBLIC_GITHUB_CLIENT_ID="Iv23liJ4LWcyfl3TEO27"
 GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
+
+#supabase
+SUPABASE_POSTGRES_URL="postgres://***"
+SUPABASE_POSTGRES_PRISMA_URL="postgres://***"
+SUPABASE_SUPABASE_URL="https://***"
+SUPABASE_NEXT_PUBLIC_SUPABASE_URL="https://***"
+SUPABASE_POSTGRES_URL_NON_POOLING="postgres://***"
+SUPABASE_SUPABASE_JWT_SECRET="***"
+SUPABASE_POSTGRES_USER="postgres"
+SUPABASE_NEXT_PUBLIC_SUPABASE_ANON_KEY="***"
+SUPABASE_POSTGRES_PASSWORD="***"
+SUPABASE_POSTGRES_DATABASE="postgres"
+SUPABASE_SUPABASE_SERVICE_ROLE_KEY="***"
+SUPABASE_POSTGRES_HOST="***"
+SUPABASE_NEXT_PUBLIC_SUPABASE_ANON_KEY="***"
