--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
-# This is an example of your .env file format, which pnpm db:setup will create.
 # Note: this must be .env, not .env.local, without further configuration changes.
-SUPABASE_POSTGRES_URL=postgresql://***
 STRIPE_SECRET_KEY=sk_test_***
 STRIPE_WEBHOOK_SECRET=whsec_***
 BASE_URL=http://localhost:3000
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_***
 CLERK_SECRET_KEY=sk_test_***
 CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_***
 
 #github
 APP_ID="1002881"
@@ -16,16 +15,16 @@ NEXT_PUBLIC_GITHUB_CLIENT_ID="Iv23liJ4LWcyfl3TEO27"
 GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
 
 #supabase
-SUPABASE_POSTGRES_URL="postgres://***"
-SUPABASE_POSTGRES_PRISMA_URL="postgres://***"
-SUPABASE_SUPABASE_URL="https://***"
-SUPABASE_NEXT_PUBLIC_SUPABASE_URL="https://***"
-SUPABASE_POSTGRES_URL_NON_POOLING="postgres://***"
-SUPABASE_SUPABASE_JWT_SECRET="***"
-SUPABASE_POSTGRES_USER="postgres"
-SUPABASE_NEXT_PUBLIC_SUPABASE_ANON_KEY="***"
-SUPABASE_POSTGRES_PASSWORD="***"
-SUPABASE_POSTGRES_DATABASE="postgres"
-SUPABASE_SUPABASE_SERVICE_ROLE_KEY="***"
-SUPABASE_POSTGRES_HOST="***"
-SUPABASE_NEXT_PUBLIC_SUPABASE_ANON_KEY="***"
+POSTGRES_URL="postgres://***"
+POSTGRES_PRISMA_URL="postgres://***"
+SUPABASE_URL="https://***"
+NEXT_PUBLIC_SUPABASE_URL="https://***"
+POSTGRES_URL_NON_POOLING="postgres://***"
+SUPABASE_JWT_SECRET="***"
+POSTGRES_USER="postgres"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="***"
+POSTGRES_PASSWORD="***"
+POSTGRES_DATABASE="postgres"
+SUPABASE_SERVICE_ROLE_KEY="***"
+POSTGRES_HOST="***"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="***"
