--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,25 @@
-# Note: this must be .env, not .env.local, without further configuration changes.
 STRIPE_SECRET_KEY=sk_test_***
 STRIPE_WEBHOOK_SECRET=whsec_***
 BASE_URL=http://localhost:3000
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_***
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
 CLERK_SECRET_KEY=sk_test_***
 CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_***
 
 #github
+NEXT_PUBLIC_GITHUB_CLIENT_ID="Iv23liJ4LWcyfl3TEO27"
 APP_ID="1002881"
 WEBHOOK_SECRET="YOUR_WEBHOOK_SECRET"
 PRIVATE_KEY_PATH="YOUR_PRIVATE_KEY_PATH"
 NEXT_PUBLIC_GITHUB_CLIENT_ID="Iv23liJ4LWcyfl3TEO27"
 GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
 
-#supabase
+#db
 POSTGRES_URL="postgres://***"
 POSTGRES_PRISMA_URL="postgres://***"
-SUPABASE_URL="https://***"
-NEXT_PUBLIC_SUPABASE_URL="https://***"
+POSTGRES_URL_NO_SSL="postgres://***"
 POSTGRES_URL_NON_POOLING="postgres://***"
-SUPABASE_JWT_SECRET="***"
-POSTGRES_USER="postgres"
-NEXT_PUBLIC_SUPABASE_ANON_KEY="***"
-POSTGRES_PASSWORD="***"
-POSTGRES_DATABASE="postgres"
-SUPABASE_SERVICE_ROLE_KEY="***"
+POSTGRES_USER="default"
 POSTGRES_HOST="***"
-NEXT_PUBLIC_SUPABASE_ANON_KEY="***"
+POSTGRES_PASSWORD="***"
+POSTGRES_DATABASE="***"
