--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ POSTGRES_USER="default"
 POSTGRES_HOST="***"
 POSTGRES_PASSWORD="***"
 POSTGRES_DATABASE="***"
+
+#ai
+OPENAI_API_KEY="sk-proj-***"
