--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,7 @@ jobs:
 
       - shell: bash
         run: pnpm install
+      - name: Install @vitest/coverage-v8
+        run: pnpm add -D @vitest/coverage-v8
       - name: "Test"
         run: npx vitest --coverage.enabled true
