chore: add "stripe:webhook" npm command for local dev

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "npx tsx lib/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
+    "stripe:webhooks": "stripe listen --forward-to http://localhost:3000/api/stripe/webhook",
     "test": "vitest"
   },
   "dependencies": {
