--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,30 @@
-STRIPE_SECRET_KEY=sk_test_***
-STRIPE_WEBHOOK_SECRET=whsec_***
-BASE_URL=http://localhost:3000
+# Static Environment Variables
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
-CLERK_SECRET_KEY=sk_test_***
+BASE_URL=http://localhost:3000
+# Used to redirect to /dashboard after sign in
 CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_***
 
-#github
-NEXT_PUBLIC_GITHUB_CLIENT_ID="Iv23liJ4LWcyfl3TEO27"
-APP_ID="1002881"
-WEBHOOK_SECRET="YOUR_WEBHOOK_SECRET"
-PRIVATE_KEY_PATH="YOUR_PRIVATE_KEY_PATH"
-NEXT_PUBLIC_GITHUB_CLIENT_ID="Iv23liJ4LWcyfl3TEO27"
-GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
+######################################################
+# Everything below is required for Local Development #
+######################################################
+# Copy from Stripe Dashboard in Test Mode
+STRIPE_SECRET_KEY=
+# Copy from Stripe CLI after running `pnpm run stripe:webhooks`
+STRIPE_WEBHOOK_SECRET=
 
-#db
-POSTGRES_URL="postgres://***"
-POSTGRES_PRISMA_URL="postgres://***"
-POSTGRES_URL_NO_SSL="postgres://***"
-POSTGRES_URL_NON_POOLING="postgres://***"
-POSTGRES_USER="default"
-POSTGRES_HOST="***"
-POSTGRES_PASSWORD="***"
-POSTGRES_DATABASE="***"
+# Copy from Clerk after creating an application
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 
-#ai
-OPENAI_API_KEY="sk-proj-***"
-ANTHROPIC_API_KEY="sk-ant-***"
+# Copy from Vercel Postgres connection string
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NO_SSL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+
+# Copy from Anthropic Dashboard Settings
+ANTHROPIC_API_KEY=
