--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "run": "^1.5.0",
     "server-only": "^0.0.1",
     "stripe": "^16.10.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.11",
     "tailwindcss-animate": "^1.0.7",
