Fix test configuration and update GitHub workflow for improved CI/CD

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Install @vitest/coverage-v8
         run: pnpm add -D @vitest/coverage-v8
       - name: "Test"
-        run: npx vitest --coverage.enabled true
+        run: npx vitest run
