Extend supported ai models - Add Model selection for google, openai, more models from anthropic - Available models are fetched from api protecting privacy of api keys

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ POSTGRES_DATABASE=
 
 # Copy from Anthropic Dashboard Settings
 ANTHROPIC_API_KEY=
+# Copy from Gemini Dashboard Settings
+GOOGLE_GENERATIVE_AI_API_KEY=
+# Copy from Open AI Dashboard Settings
+OPENAI_API_KEY=
