--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "js-yaml": "^4.1.0",
     "jsdom": "^25.0.1",
     "smee-client": "^2.0.3",
-    "vitest": "^2.1.1"
+    "vitest": "^2.1.1",
+    "shortest": "workspace:*"
   }
 }
