--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "description": "AI-powered testing framework",
     "type": "module",
+    "bin": {
+      "shortest": "dist/cli/bin.js"
+    },
     "main": "./dist/index.js",
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -17,10 +20,18 @@
       "dist"
     ],
     "scripts": {
-      "build": "tsup src/index.ts --format cjs,esm --dts --sourcemap",
-      "dev": "tsup src/index.ts --format cjs,esm --dts --sourcemap --watch"
+      "build": "tsup",
+      "dev": "tsup --watch",
+      "prepare": "chmod +x dist/cli/bin.js"
+    },
+    "dependencies": {
+      "chokidar": "^3.5.3",
+      "glob": "^10.3.10",
+      "picocolors": "^1.0.0",
+      "esbuild": "^0.20.1"
     },
     "devDependencies": {
+      "@types/node": "^20.11.24",
       "typescript": "~5.6.2",
       "tsup": "^8.0.0"
     }
