--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -4,7 +4,7 @@
     "description": "AI-powered testing framework",
     "type": "module",
     "bin": {
-      "shortest": "dist/cli/bin.js"
+      "shortest": "./dist/cli/bin.js"
     },
     "main": "./dist/index.js",
     "module": "./dist/index.js",
@@ -20,9 +20,10 @@
       "dist"
     ],
     "scripts": {
-      "build": "tsup",
-      "dev": "tsup --watch",
-      "prepare": "chmod +x dist/cli/bin.js"
+      "build": "esbuild src/cli/bin.ts --bundle --platform=node --format=esm --outfile=dist/cli/bin.js --external:fsevents --external:chokidar --external:glob --external:esbuild --banner:js='import { createRequire } from \"module\"; const require = createRequire(import.meta.url); import { fileURLToPath } from \"url\"; const __filename = fileURLToPath(import.meta.url); import { dirname } from \"path\"; const __dirname = dirname(__filename);' --external:events --external:path --external:fs --external:util --external:stream --external:os --external:assert --external:url",
+      "dev": "pnpm build --watch",
+      "prepare": "pnpm build && chmod +x dist/cli/bin.js",
+      "preinstall": "pnpm build"
     },
     "dependencies": {
       "chokidar": "^3.5.3",
@@ -32,7 +33,6 @@
     },
     "devDependencies": {
       "@types/node": "^20.11.24",
-      "typescript": "~5.6.2",
-      "tsup": "^8.0.0"
+      "typescript": "~5.6.2"
     }
 }
