--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -29,7 +29,8 @@
       "chokidar": "^3.5.3",
       "glob": "^10.3.10",
       "picocolors": "^1.0.0",
-      "esbuild": "^0.20.1"
+      "esbuild": "^0.20.1",
+      "chrome-launcher": "^1.1.0"
     },
     "devDependencies": {
       "@types/node": "^20.11.24",
