--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -25,8 +25,9 @@
     "build:js": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:fsevents --external:chokidar --external:glob --external:esbuild --external:playwright --external:playwright-core --external:chromium-bidi",
     "build:cli": "esbuild src/cli/bin.ts --bundle --platform=node --format=esm --outfile=dist/cli/bin.js --external:fsevents --external:chokidar --external:glob --external:esbuild --banner:js='import { createRequire } from \"module\"; const require = createRequire(import.meta.url); import { fileURLToPath } from \"url\"; const __filename = fileURLToPath(import.meta.url); import { dirname } from \"path\"; const __dirname = dirname(__filename);' --external:events --external:path --external:fs --external:util --external:stream --external:os --external:assert --external:url",
     "dev": "pnpm build:types --watch",
-    "prepare": "pnpm build && chmod +x dist/cli/bin.js",
+    "prepare": "pnpm exec playwright install && pnpm build && chmod +x dist/cli/bin.js",
     "preinstall": "pnpm build",
+    "postinstall": "pnpm exec playwright install",
     "test:ai": "tsx scripts/test-ai.ts",
     "test:browser": "tsx scripts/test-browser.ts",
     "test:coordinates": "tsx scripts/test-coordinates.ts"
