feat: add new cli flag to enforce headless mode

--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Run Shortest tests
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: pnpm shortest 
+        run: pnpm shortest --headless
