--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -1,28 +1,17 @@
 name: "Shortest Tests"
 on:
+  # We want to listen to Vercel deployment status events
   deployment_status
 
 jobs:
   shortest:
-    # Only run when:
-    # 1. It's a successful deployment
-    # 2. It's from Vercel (vercel.app in URL)
-    # 3. It's a preview deployment (not production)
+    # Only run on Vercel deployment success
     if: |
       github.event.deployment_status.state == 'success' && 
-      contains(github.event.deployment_status.target_url, 'vercel.app') &&
-      github.event.deployment.environment == 'Preview'
+      contains(github.event.deployment_status.target_url, 'vercel.app')
     runs-on: ubuntu-latest
     
     steps:
-      # Add timeout to ensure we don't wait forever
-      timeout-minutes: 15
-      
-      # Cancel any in-progress jobs if a new deployment comes in
-      concurrency:
-        group: ${{ github.workflow }}-${{ github.ref }}
-        cancel-in-progress: true
-      
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
@@ -37,8 +26,6 @@ jobs:
         id: vercel_url
         run: |
           DEPLOY_URL="${{ github.event.deployment_status.target_url }}"
-          # Verify the URL is accessible
-          curl --retry 3 --retry-delay 1 -f "$DEPLOY_URL" || exit 1
           echo "url=$DEPLOY_URL" >> $GITHUB_OUTPUT
 
       - name: Run Shortest tests
