--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -40,6 +40,7 @@
     "esbuild": "^0.20.1",
     "glob": "^10.3.10",
     "dotenv": "^16.4.5",
+    "otplib": "^12.0.1",
     "picocolors": "^1.0.0",
     "playwright": "^1.42.1"
   },
