Add new test command for github test

--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -30,7 +30,8 @@
     "postinstall": "pnpm exec playwright install",
     "test:ai": "tsx scripts/test-ai.ts",
     "test:browser": "tsx scripts/test-browser.ts",
-    "test:coordinates": "tsx scripts/test-coordinates.ts"
+    "test:coordinates": "tsx scripts/test-coordinates.ts",
+    "test:github": "tsx scripts/test-github.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "0.32.0",
