--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,8 @@ POSTGRES_DATABASE=
 
 # Copy from Anthropic Dashboard Settings
 ANTHROPIC_API_KEY=
+
+# Copy from Github Settings
+GITHUB_TOTP_SECRET=
+GITHUB_USERNAME=
+GITHUB_PASSWORD=
