chore: add jest dependencies and update typescript config

--- a/packages/shortest/tsconfig.json
+++ b/packages/shortest/tsconfig.json
@@ -8,7 +8,8 @@
       "declaration": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
-      "rootDir": "./src"
+      "rootDir": "./src",
+      "types": ["node", "jest"]
     },
     "include": ["src"],
     "exclude": ["node_modules", "dist"]
