--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -31,7 +31,8 @@
     "test:ai": "tsx scripts/test-ai.ts",
     "test:browser": "tsx scripts/test-browser.ts",
     "test:coordinates": "tsx scripts/test-coordinates.ts",
-    "test:github": "tsx scripts/test-github.ts"
+    "test:github": "tsx scripts/test-github.ts",
+    "test:assertion": "tsx scripts/test-assertion.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "0.32.0",
@@ -43,11 +44,13 @@
     "dotenv": "^16.4.5",
     "otplib": "^12.0.1",
     "picocolors": "^1.0.0",
-    "playwright": "^1.42.1"
+    "playwright": "^1.42.1",
+    "expect": "^29.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
     "tsx": "^4.7.1",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "@types/jest": "^29.5.12"
   }
 }
