Refactor: add define and expect to __shortest__ name space

--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types/shortest.d.ts",
   "bin": {
     "shortest": "./dist/cli/bin.js"
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": "./dist/types/shortest.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
