--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -20,9 +20,10 @@
     "dist"
   ],
   "scripts": {
-    "setup": "node ./dist/cli/setup.js",
     "build": "rm -rf dist && pnpm build:types && pnpm build:js && pnpm build:cli",
+    "prepare": "pnpm build",
     "prepublishOnly": "pnpm build && chmod +x dist/cli/bin.js",
+    "postprepare": "node ./dist/cli/setup.js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "pnpm build:main && pnpm build:cjs",
     "build:main": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:esbuild --external:punycode --external:playwright --external:@anthropic-ai/sdk --external:expect --external:dotenv",
@@ -33,9 +34,7 @@
     "test:browser": "tsx tests/test-browser.ts",
     "test:coordinates": "tsx tests/test-coordinates.ts",
     "test:github": "tsx tests/test-github.ts",
-    "test:assertion": "tsx tests/test-assertion.ts",
-    "analyze": "esbuild-visualizer --metadata dist/meta-cli.json --open",
-    "postinstall": "node ./dist/cli/setup.js"
+    "test:assertion": "tsx tests/test-assertion.ts"
   },
   "dependencies": {
     "glob": "^10.3.10",
