--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -25,8 +25,7 @@
     "prepublishOnly": "pnpm build && chmod +x dist/cli/bin.js",
     "postprepare": "node ./dist/cli/setup.js",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "pnpm build:main && pnpm build:cjs",
-    "build:main": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:esbuild --external:punycode --external:playwright --external:@anthropic-ai/sdk --external:expect --external:dotenv",
+    "build:js": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:esbuild --external:punycode --external:playwright --external:@anthropic-ai/sdk --external:expect --external:dotenv",
     "build:cjs": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/index.cjs --external:esbuild --external:punycode --external:playwright --external:@anthropic-ai/sdk --external:expect --external:dotenv",
     "build:cli": "esbuild src/cli/bin.ts src/cli/setup.ts --bundle --platform=node --format=esm --outdir=dist/cli --metafile=dist/meta-cli.json --external:fsevents --external:chokidar --external:glob --external:esbuild --external:events --external:path --external:fs --external:util --external:stream --external:os --external:assert --external:url --external:playwright --external:@anthropic-ai/sdk --external:expect --external:dotenv --external:otplib --external:picocolors --external:punycode",
     "dev": "pnpm build:types --watch",
@@ -38,6 +37,7 @@
   },
   "dependencies": {
     "glob": "^10.3.10",
+    "chromium-bidi": "^0.5.2",
     "otplib": "^12.0.1",
     "picocolors": "^1.0.0"
   },
