--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "happy-dom": "^15.7.4",
     "js-yaml": "^4.1.0",
     "jsdom": "^25.0.1",
-    "shortest": "workspace:*",
+    "@antiwork/shortest": "workspace:*",
     "smee-client": "^2.0.3",
     "tsx": "^4.7.1",
     "vitest": "^2.1.1"
