--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.50",
     "@ai-sdk/openai": "^0.0.61",
-    "@clerk/nextjs": "^5.6.0",
+    "@clerk/nextjs": "^6.5.1",
     "@octokit/rest": "^21.0.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -32,6 +33,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.5.4",
@@ -48,16 +50,24 @@
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.24.2",
     "drizzle-orm": "^0.33.0",
+    "gray-matter": "^4.0.3",
     "jose": "^5.8.0",
     "lucide-react": "^0.439.0",
     "minimatch": "^10.0.1",
-    "next": "15.0.0-canary.152",
+    "next": "15.0.3",
+    "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.3",
     "postcss": "^8.4.45",
     "postgres": "^3.4.4",
-    "react": "19.0.0-rc-7771d3a7-20240827",
+    "react": "19.0.0-rc-66855b96-20241106",
     "react-beautiful-dnd": "^13.1.1",
     "react-diff-viewer": "^3.1.1",
-    "react-dom": "19.0.0-rc-7771d3a7-20240827",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-prism-plus": "^2.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "run": "^1.5.0",
     "server-only": "^0.0.1",
     "stripe": "^16.10.0",
@@ -67,11 +77,14 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "1.1.5",
     "typescript": "^5.6.2",
+    "unist-util-visit": "^5.0.0",
     "vaul": "^0.9.4",
     "vite-tsconfig-paths": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.14",
+    "@antiwork/shortest": "workspace:*",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/adm-zip": "^0.5.5",
@@ -80,7 +93,6 @@
     "happy-dom": "^15.7.4",
     "js-yaml": "^4.1.0",
     "jsdom": "^25.0.1",
-    "@antiwork/shortest": "workspace:*",
     "smee-client": "^2.0.3",
     "tsx": "^4.7.1",
     "vitest": "^2.1.1"
