--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -46,13 +46,14 @@
     "tsx": "^4.7.1",
     "typescript": "~5.6.2",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.24"
+    "@types/node": "^20.11.24",
+    "playwright": "1.48.2"
   },
   "engines": {
     "node": ">=18"
   },
   "peerDependencies": {
-    "playwright": "^1.42.1",
+    "playwright": "^1.48.2",
     "esbuild": "^0.20.1",
     "@anthropic-ai/sdk": "0.32.0",
     "expect": "^29.7.0",
