--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -46,8 +46,7 @@
     "tsx": "^4.7.1",
     "typescript": "~5.6.2",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.24",
-    "playwright": "1.48.2"
+    "@types/node": "^20.11.24"
   },
   "engines": {
     "node": ">=18"
