install playwright before runnig shortest

--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Install Playwright browsers
+        run: pnpm exec playwright install
+
       - name: Get Vercel preview URL
         id: vercel_url
         run: |
