Checks if pnpm-lock.yaml exists

--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -28,7 +28,12 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          if [ ! -f "pnpm-lock.yaml" ]; then
+            pnpm install
+          else
+            pnpm install --frozen-lockfile
+          fi
 
       - name: Install Playwright browsers
         run: pnpm exec playwright install
