--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 8
+          run_install: false
 
       - uses: actions/setup-node@v4
         with:
