--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -33,22 +33,15 @@ jobs:
       - name: Install Playwright browsers
         run: pnpm exec playwright install
 
-      - name: Get Vercel preview URL
-        id: vercel_preview
-        uses: actions/github-script@v7
+      - name: Wait for Vercel preview URL
+        uses: patrickedqvist/wait-for-vercel-preview@v1.3.2
+        id: waitFor
         with:
-          script: |
-            const deployments = await github.rest.repos.listDeployments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha
-            });
-            if (deployments.data.length > 0) {
-              return deployments.data[0].payload.url;
-            }
-            throw new Error('No deployment found');
+          token: ${{ secrets.GITHUB_TOKEN }}
+          max_timeout: 300
+          check_status: false # Don't check the URL status
 
       - name: Run Shortest tests
         env:
-          PLAYWRIGHT_TEST_BASE_URL: ${{ steps.vercel_preview.outputs.result }}
-        run: pnpm exec shortest --headless --target=${{ steps.vercel_preview.outputs.result }}
+          PLAYWRIGHT_TEST_BASE_URL: ${{ steps.waitFor.outputs.url }}
+        run: pnpm exec shortest --headless --target=${{ steps.waitFor.outputs.url }}
