--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -16,16 +16,24 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
+
+      # Setup pnpm first
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      # Then setup Node with pnpm caching
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'pnpm'
+          cache-dependency-path: '**/pnpm-lock.yaml'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --no-frozen-lockfile
 
       - name: Install Playwright browsers
-        run: npx playwright install
+        run: pnpm exec playwright install
 
       - name: Wait for Vercel preview deployment
         uses: patrickedqvist/wait-for-vercel-preview@v1.3.2
@@ -33,8 +41,9 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           max_timeout: 300
+          check_status: false
 
       - name: Run Shortest tests
         env:
           PLAYWRIGHT_TEST_BASE_URL: ${{ steps.waitFor.outputs.url }}
-        run: npx shortest --headless --target=${{ steps.waitFor.outputs.url }}
+        run: pnpm shortest --headless --target=${{ steps.waitFor.outputs.url }}
