refactor: Directly execute setup.js since we now handle errors gracefully inside it

--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -25,7 +25,7 @@
     "build": "rm -rf dist && pnpm build:types && pnpm build:js && pnpm build:cli",
     "prepare": "pnpm build",
     "prepublishOnly": "pnpm build",
-    "postinstall": "node -e \"try { require('./dist/cli/setup.js') } catch (e) { process.exit(0) }\" && (chmod +x ./dist/cli/bin.js || true)",
+    "postinstall": "node dist/cli/setup.js && chmod +x dist/cli/bin.js",
     "build:types": "tsc --emitDeclarationOnly --outDir dist/types && cp index.d.ts dist/",
     "build:js": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:esbuild --external:punycode --external:playwright --external:@anthropic-ai/sdk --external:expect --external:dotenv",
     "build:cjs": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/index.cjs --external:esbuild --external:punycode --external:playwright --external:@anthropic-ai/sdk --external:expect --external:dotenv",
