install browsers before test execution to speed up the workflow

--- a/.github/workflows/shortest.yml
+++ b/.github/workflows/shortest.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
+      - name: Install Playwright
+        run: pnpm exec playwright install chromium
+
       - name: Wait for Vercel preview deployment
         uses: patrickedqvist/wait-for-vercel-preview@v1.3.2
         id: waitFor
